--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,16 +1,16 @@
 repos:
     - repo: https://github.com/psf/black
-      rev: 22.1.0
+      rev: 22.12.0
       hooks:
           - id: black
             name: black
     - repo: https://github.com/pycqa/isort
-      rev: 5.10.1
+      rev: 5.12.0
       hooks:
           - id: isort
             name: isort
-    - repo: https://gitlab.com/pycqa/flake8
-      rev: 3.9.2
+    - repo: https://github.com/pycqa/flake8
+      rev: 6.0.0
       hooks:
           - id: flake8
             name: flake8
