--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,19 +1,23 @@
 repos:
+    - repo: https://github.com/astral-sh/ruff-pre-commit
+      rev: v0.0.287
+      hooks:
+        - id: ruff
+          args: [ --fix, --exit-non-zero-on-fix ]
     - repo: https://github.com/psf/black
-      rev: 22.12.0
+      rev: 23.7.0
       hooks:
           - id: black
-            name: black
-    - repo: https://github.com/pycqa/isort
-      rev: 5.12.0
-      hooks:
-          - id: isort
-            name: isort
-    - repo: https://github.com/pycqa/flake8
-      rev: 6.0.0
-      hooks:
-          - id: flake8
-            name: flake8
+#    - repo: https://github.com/pycqa/isort
+#      rev: 5.12.0
+#      hooks:
+#          - id: isort
+#            name: isort
+#    - repo: https://github.com/pycqa/flake8
+#      rev: 6.0.0
+#      hooks:
+#          - id: flake8
+#            name: flake8
 
 default_language_version:
-    python: python3.9
+    python: python3.11
