--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,80 @@
 [build-system]
-requires = ["setuptools>=40.9.0", "wheel"]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[project]
+name = "nbapi"
+version = "0.0.2"
+description = "Python interface to NBA Stats API."
+requires-python = "~=3.11"
+license = {file = "LICENSE.md"}
+authors = [
+    {name = "Jon Deans", email = "jrdeans@gmail.com"},
+]
+readme = "README.md"
+dependencies = [
+    "datatable",
+    "pandas",
+    "requests",
+    "requests-cache @ git+ssh://git@github.com/requests-cache/requests-cache",
+#    "html5lib",
+#    "lxml",
+#    "matplotlib",
+#    "numpy",
+#    "scipy",
+#    "seaborn",
+#    "statsmodels",
+]
+
+[project.optional-dependencies]
+dev = [
+    "black==23.7.0",
+#    "flake8==6.0.0",
+#    "isort==5.12.0",
+    "mypy==1.4.1",
+    "pytest==7.4.0",
+    "pre-commit==3.3.3",
+    "ruff==0.0.281"
+]
+
+[project.urls]
+repository = "https://github.com/jondeans/nbapi"
+
+[tool.setuptools.packages]
+find = {}
 
 [tool.black]
-line_length = 90
-language_version = "python3.9"
+line_length = 100
+language_version = "python3.11"
 
-[tool.isort]
-py_version=39
-combine_as_imports = true
-force_grid_wrap = 0
-include_trailing_comma = true
-known_first_party = ["nbapi"]
-line_length = 90
-multi_line_output = 3
-profile = "black"
+#[tool.isort]
+#py_version = 311
+#combine_as_imports = true
+#force_grid_wrap = 0
+#include_trailing_comma = true
+##known_first_party = ["apeye"]
+#line_length = 100
+#multi_line_output = 3
+#profile = "black"
 
 [tool.pytest.ini_options]
-addopts = "-rAvs --import-mode=importlib"
+addopts = "-r A -v -s --import-mode=importlib --doctest-modules"
+log_cli = 1
+log_cli_level = "DEBUG"
+log_cli_format = "  %(asctime)s | %(levelname)8s | %(message)s"
+log_cli_date_format = "%H:%M:%S"
+python_files =[
+    "test_*.py",
+    "check_*.py",
+    "example_*.py"
+]
 testpaths = ["tests"]
+
+[tool.ruff]
+select = ["C", "E", "F", "W", "B"]
+ignore = ["E203", "E266", "E501", "E731", "E741", "F401", "F403", "W291", "W293", "W605"]
+line-length = 100
+[tool.ruff.mccabe]
+max-complexity = 18
+[tool.ruff.per-file-ignores]
+"__init__.py" = ["F401"]
